display employee but not display modal when click
publem with displayModal() function

--- a/public_api_request-v1/index.html
+++ b/public_api_request-v1/index.html
@@ -34,6 +34,7 @@
                             <input type="submit" value="&#x1F50D;" id="search-submit" class="search-submit">
                         </form>
                     ======================= -->
+                    
                 </div>
             </div>
         </header>
@@ -96,6 +97,6 @@
         ======================== -->
 
         <!-- Add your JS here -->
-        
+        <script src="js/scripts.js"></script>
     </body>
 </html>
